cmake_minimum_required(VERSION 3.24)
project(gGac)

set(CMAKE_CXX_STANDARD 20)
add_compile_definitions(VCZH_DEBUG_NO_REFLECTION)

find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtkmm-3.0 sigc++-2.0)
pkg_check_modules(gGac REQUIRED gGac GacUI)

set(CMAKE_BUILD_TYPE RELEASE)
set(CMAKE_C_FLAGS_DEBUG "-g -DDEBUG -gdwarf-4")
set(CMAKE_CXX_FLAGS_DEBUG "-g -DDEBUG -gdwarf-4")

include_directories(./ ${gGac_INCLUDE_DIRS} ${GTK3_INCLUDE_DIRS})

add_subdirectory(GacUI_HelloWorlds/Cpp)
add_subdirectory(GacUI_HelloWorlds/CppXml)
add_subdirectory(GacUI_HelloWorlds/MVVM)
add_subdirectory(GacUI_Layout/Alignment)
add_subdirectory(GacUI_Layout/Flow)
add_subdirectory(GacUI_Layout/Responsive1)
add_subdirectory(GacUI_Layout/Responsive2)
add_subdirectory(GacUI_Layout/RichTextEmbedding)
add_subdirectory(GacUI_Layout/SharedSize)
add_subdirectory(GacUI_Layout/Stack)
add_subdirectory(GacUI_Layout/Table)
add_subdirectory(GacUI_Layout/TableSplitter)
add_subdirectory(GacUI_Xml/Binding_Bind)
add_subdirectory(GacUI_Xml/Binding_Eval)
add_subdirectory(GacUI_Xml/Binding_Format)
add_subdirectory(GacUI_Xml/Binding_Uri)
add_subdirectory(GacUI_Xml/Binding_ViewModel)
add_subdirectory(GacUI_Xml/Event_Cpp)
add_subdirectory(GacUI_Xml/Event_Script)
add_subdirectory(GacUI_Xml/Event_ViewModel)
add_subdirectory(GacUI_Xml/Instance_Control)
add_subdirectory(GacUI_Xml/Instance_MultipleWindows)
add_subdirectory(GacUI_Xml/Instance_Window)
add_subdirectory(GacUI_Xml/Member_Field)
add_subdirectory(GacUI_Xml/Member_Parameter)
add_subdirectory(GacUI_Xml/Member_Property)
add_subdirectory(GacUI_Xml/Misc_ImportFolder)
add_subdirectory(GacUI_Controls/AddressBook)
add_subdirectory(GacUI_Controls/Animation)
add_subdirectory(GacUI_Controls/CalculatorAndStateMachine)
add_subdirectory(GacUI_Controls/ColorPicker)
add_subdirectory(GacUI_Controls/ContainersAndButtons)
add_subdirectory(GacUI_Controls/DataGrid)
add_subdirectory(GacUI_Controls/DocumentEditorRibbon)
add_subdirectory(GacUI_Controls/DocumentEditorToolstrip)
add_subdirectory(GacUI_Controls/ListControls)
add_subdirectory(GacUI_Controls/Localization)
add_subdirectory(GacUI_Controls/MenuVisibility)
add_subdirectory(GacUI_Controls/ProgressAndAsync)
add_subdirectory(GacUI_Controls/QueryService)
add_subdirectory(GacUI_Controls/TextEditor)
add_subdirectory(GacUI_Controls/TriplePhaseImageButton)
add_subdirectory(GacUI_ControlTemplate/WindowSkin)

list(APPEND CATEGORIES GacUI_Controls GacUI_ControlTemplate GacUI_HelloWorlds GacUI_Layout GacUI_Xml)
foreach(CATEGORY IN LISTS CATEGORIES)
    execute_process(COMMAND ${CMAKE_COMMAND} -E copy_directory
            ${CMAKE_CURRENT_SOURCE_DIR}/../GacUI/Tutorial/${CATEGORY}/UIRes
            ${CMAKE_CURRENT_BINARY_DIR}/${CATEGORY}/UIRes)
endforeach()
